# ruin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.claude/skills/metric-add/: SKILL.md
.claude/skills/numerical-parity/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
changelog/: index.html
contributing/: index.html
conventions/: index.html
docs/: api.md  assumptions.md  conventions.md  index.md  metrics.md
metrics/: index.html
search/: search_index.json
src/ruin/: __init__.py  activity.py  distribution.py  drawdown.py  inference.py  market.py  periods.py  ratios.py  report.py  returns.py  rolling.py  tail.py  volatility.py
src/ruin/_internal/: expressions.py  normal.py  validate.py
stylesheets/: extra.css
tests/: conftest.py  test_activity.py  test_benchmarks.py  test_distribution.py  test_drawdown.py  test_inference.py  test_market.py  test_periods.py  test_properties.py  test_ratios.py  test_reference.py  test_report.py  test_returns.py  test_rolling.py  test_tail.py  test_volatility.py
