[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruin"
version = "0.1.0"
description = "A Polars-first risk metrics library for quant hedge funds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "polars>=1.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
stats = ["scipy>=1.9"]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<7.0",
    "pytest-benchmark>=4.0,<6.0",
    "hypothesis>=6.0,<7.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ruin"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "NPY"]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false
# arg-type is disabled globally because Polars scalar reductions (.sum, .min, .quantile,
# etc.) are typed as broad unions (int | float | Decimal | date | ...). Passing them
# to float(...) is safe at runtime but noisy at type-check time.
disable_error_code = ["arg-type"]
files = ["src", "tests"]
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "--cov=ruin --strict-markers --strict-config"
testpaths = ["tests"]
