[project]
name = "pyruin"
version = "0.1.0"
description = "Polars-first risk metrics for quant hedge funds"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Antônio Salomão", email = "83646729+aexsalomao@users.noreply.github.com" }
]
keywords = ["risk", "finance", "quant", "polars", "sharpe", "drawdown", "var", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
stats = ["scipy>=1.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0,<6.0",
    "hypothesis>=6.0,<7.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://aexsalomao.github.io/ruin"
Documentation = "https://aexsalomao.github.io/ruin"
Repository = "https://github.com/aexsalomao/ruin"
Issues = "https://github.com/aexsalomao/ruin/issues"
Changelog = "https://github.com/aexsalomao/ruin/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Distributed on PyPI as `pyruin` (the name `ruin` was taken),
# but the import name stays `ruin`.
module-name = "ruin"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "NPY", # numpy-specific rules
]
ignore = [
    "B904", # raise-without-from-inside-except — sometimes intentional
]

[tool.ruff.lint.isort]
known-first-party = ["ruin"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/"]
files = ["src"]
mypy_path = "src"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
# warn_unused_ignores / warn_return_any are deliberately off: Polars scalar reductions
# (.sum, .min, .quantile, …) are typed as broad unions (int | float | Decimal | date | …),
# which makes "no-any-return" noisy on safe float(…) calls. arg-type is silenced for the
# same reason.
warn_unused_ignores = false
warn_return_any = false
disable_error_code = ["arg-type"]

[tool.coverage.run]
source = ["ruin"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
